Parse links to video websites

And load them up as videos. Add totem_pl_parser_can_parse_from_uri
that could be used with the mini parser.

Expand the starttime parsing to include the YouTube format.

https://bugzilla.gnome.org/show_bug.cgi?id=635709